# dotfiles-rs

./: Cargo.toml  DESIGN.md  README.md  build.rs
.cargo/: config.toml
src/: config.rs  main.rs
