[package]
name = "dotfiles-rs"
version = "0.1.0"
edition = "2021"
description = "A dotfiles manager."
authors = ["Steven Dake <steven.dake@gmail.com>", "Steven Dake <steve@computelify.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
thiserror = "1.0"
termcolor = "1.2"
regex = "1.10"
walkdir = "2.4"
once_cell = "1.18"

[build-dependencies]
toml = "0.8"
chrono = "0.4"
