[package]
name = "dotfiles-rs"
version = "0.4.2"
authors = ["Steven Dake <steven.dake@gmail.com>", "Steven Dake <steve@computelify.com>"]
description = "Dotfiles-rs builds a self-contained binary including both management code and dotfile configuration."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sdake/dotfiles-rs"
repository = "https://github.com/sdake/dotfiles-rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
thiserror = "1.0"
termcolor = "1.2"
regex = "1.10"
walkdir = "2.4"
once_cell = "1.18"

[build-dependencies]
toml = "0.8"
chrono = "0.4"
